= 1.1.3 = * Fix: Added click event to allow video play on iOS
git-svn-id: https://plugins.svn.wordpress.org/zendy-lede/trunk@1066631 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/front-end-styles.css
+++ b/css/front-end-styles.css
@@ -26,9 +26,8 @@ VIDEO
 	top: 0;
 	left: 0;
 	width: 100%;
-	background: rgba(0,0,0,0.5);
+	background: rgba(0,0,0,0.2);
 	z-index: 200;
-	display: none;
 }
 
 #zendy-lede-text-wrapper{
